--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!-- Parte iniziale -->
+    <header>
+        <h1>Il mio viaggio a londra</h1>
+        <img src="./img-london/pexels-bill-emrich-230794-0.jpg" alt="">
+        <img src="./img-london/pexels-bill-emrich-230794-1.jpg" alt="">
+        <img src="./img-london/pexels-bill-emrich-230794-2.jpg" alt="">
+        <hr>
+    </header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
