--- a/index.html
+++ b/index.html
@@ -14,7 +14,73 @@
         <img src="./img-london/pexels-bill-emrich-230794-2.jpg" alt="">
         <hr>
     </header>
-    <main></main>
+    <!-- parte centrale (liste e tabelle) -->
+    <main>
+        <!-- Spese -->
+        <h2>Le mie spese</h2>
+        <table>
+            <tr>
+                <th>Numero</th>
+                <th>Descrizione</th>
+                <th>Costo</th>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Biglietto Aereo</td>
+                <td>120 &euro;</td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Biglietto Aereo</td>
+                <td>120 &euro;</td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Biglietto Aereo</td>
+                <td>120 &euro;</td>
+            </tr>
+            <tr>
+                <td>Totale</td>
+                <td></td>
+                <td>360 &euro;</td>
+            </tr>
+        </table>
+        <hr>
+        <!-- Cose da fare(lista non numerata) -->
+        <h3>Cose da fare</h3>
+        <ul>
+            <li>Visitare la Tower Of London &#x2718;</li>
+            <li>Visitare Greenwich &#x2714;</li>
+            <li>Ascoltare un artista di strada a Covent Garden &#x2714;</li>
+            <li>Mangiare il tipico Fish and Chips Inglese &#x2718;</li>
+        </ul>
+        <hr>
+        <!-- Informazioni utili -->
+        <h3>Info utili:</h3>
+        <ol>
+            <li>Numeri utili di emergenza
+                <ul>
+                    <li><strong>999</strong>- Emergenza</li>
+                    <li><strong>101</strong>- Numero Polizia</li>
+                    <li><strong>111</strong>- Numero assistenza medica</li>
+                </ul>
+            </li>
+            <li>Hotel
+                <ul>
+                    <li><strong>Nome hotel:</strong> Bukingham Palace</li>
+                    <li><strong>Indirizzo hotel:</strong> Westmister, London SW1A 1AA, Regno Unito</li>
+                </ul>
+            </li>
+            <li>Aereo
+                <ul>
+                    <li><strong>Volo di andata:</strong> YI234X, ore 9:30 da Milano Malpensa</li>
+                    <li><strong>Volo di ritorno:</strong> YI236X, ore 18:30 da London Heathrow</li>
+                </ul>
+            </li>
+        </ol>
+        <hr>
+    </main>
+    <!-- foto finali -->
     <footer></footer>
 </body>
 </html>
